--- a/3. Windows/03-AD/01.Windows_server.md
+++ b/3. Windows/03-AD/01.Windows_server.md
@@ -14,9 +14,9 @@ On this computer, there will be two users.
 2. Bob, who is a user with restricted access. 
 He can only read, write and execute files in his ``/Users/Bob`` folder.
 3. Some network services will have to be shared between users.
-4. You must configure an IIS web server
-5. You must configure an DNS server
-6. You must configure an DHCP server
+4. You must configure an IIS web server (https://www.techtarget.com/searchwindowsserver/video/How-to-install-and-test-Windows-Server-2019-IIS)
+5. You must configure a DNS server
+6. You must configure a DHCP server
 7. Install LDAP
 8. Securise your AD
 
@@ -25,33 +25,12 @@ As it is a windows system, don't forget to **install/configure an antivirus and 
 
 ![](https://d1fmx1rbmqrxrr.cloudfront.net/cnet/i/edit/2016/02/windows-3-1-archive.png)
 
-## Learning Objectives 
-- be able to install windows
-- be able to configure a windows
-- be able to configure an Antivirus and firewall.
-- be able to Network service.
-- be able to config an webserver IIS
-- be able to config an DHCP server
-- be able to  config an DNS server
-
-
 ### Steps
 Take the following courses: 
 * [Windows server](https://openclassrooms.com/en/courses/7710301-manage-windows-server)
-
-## Evaluation criterias
-| Criteria       | Indicator                                                                             | Yes/No |
-|----------------|---------------------------------------------------------------------------------------|--------|
-| 1. Is complete | I have installed Windows sever 2016                                     |        |
-|                | I have added a user Alice who is the system administrator. available.                                           |        |
-|                | I added a user Bob who should only have write, execute and read rights in the /Users/Bob folder                              					                 |        |
-| | I have configured an antivirus and firewall. ||
-| | I have installed a Network service firewall. ||
-| | I have configured an IIS Server. ||
-| | I have configured an DNS Server. ||
-| | I have configured an DHCP  Server. ||
-
-## Ready to fix your friends' computers? 
-
-
-![You've got this!](https://media.giphy.com/media/hpF9R9M1PHN5e5liSx/giphy.gif)
+* https://www.youtube.com/watch?v=eFK656ubKi4
+* Configure DNS server
+* Configure DHCH server
+* Install IIS web server
+* Install LDAP
+* Secure AD
