--- a/3. Windows/03-AD/01.Windows_server.md
+++ b/3. Windows/03-AD/01.Windows_server.md
@@ -14,7 +14,7 @@ On this computer, there will be two users.
 2. Bob, who is a user with restricted access. 
 He can only read, write and execute files in his ``/Users/Bob`` folder.
 3. Some network services will have to be shared between users.
-4. You must configure an IIS web server (https://www.techtarget.com/searchwindowsserver/video/How-to-install-and-test-Windows-Server-2019-IIS)
+4. You must configure an IIS web server 
 5. You must configure a DNS server
 6. You must configure a DHCP server
 7. Install LDAP
@@ -28,9 +28,9 @@ As it is a windows system, don't forget to **install/configure an antivirus and 
 ### Steps
 Take the following courses: 
 * [Windows server](https://openclassrooms.com/en/courses/7710301-manage-windows-server)
-* https://www.youtube.com/watch?v=eFK656ubKi4
-* Configure DNS server
-* Configure DHCH server
-* Install IIS web server
+* [Installing Windows Server]|(https://www.youtube.com/watch?v=eFK656ubKi4)
+* [Configure DNS server]|(https://learn.microsoft.com/en-us/windows-server/networking/dns/quickstart-install-configure-dns-server?tabs=gui)
+* [Configure DHCH server]|(https://learn.microsoft.com/en-us/windows-server/networking/technologies/dhcp/quickstart-install-configure-dhcp-server?tabs=gui)
+* [Install IIS web server]|(https://www.techtarget.com/searchwindowsserver/video/How-to-install-and-test-Windows-Server-2019-IIS)
 * Install LDAP
 * Secure AD
