--- a/3. Windows/03-AD/01.Windows_server.md
+++ b/3. Windows/03-AD/01.Windows_server.md
@@ -27,6 +27,7 @@ As it is a windows system, don't forget to **install/configure an antivirus and 
 
 ### Steps
 Take the following courses: 
+* [Discover Windows Server](https://openclassrooms.com/en/courses/7710301-manage-windows-server/7802999-discover-windows-server)
 * [Windows server](https://openclassrooms.com/en/courses/7710301-manage-windows-server)
 * [Installing Windows Server]|(https://www.youtube.com/watch?v=eFK656ubKi4)
 * [Configure DNS server]|(https://learn.microsoft.com/en-us/windows-server/networking/dns/quickstart-install-configure-dns-server?tabs=gui)
