--- a/3. Windows/03-AD/01.Windows_server.md
+++ b/3. Windows/03-AD/01.Windows_server.md
@@ -29,9 +29,9 @@ As it is a windows system, don't forget to **install/configure an antivirus and 
 Take the following courses: 
 * [Discover Windows Server](https://openclassrooms.com/en/courses/7710301-manage-windows-server/7802999-discover-windows-server)
 * [Windows server](https://openclassrooms.com/en/courses/7710301-manage-windows-server)
-* [Installing Windows Server]|(https://www.youtube.com/watch?v=eFK656ubKi4)
-* [Configure DNS server]|(https://learn.microsoft.com/en-us/windows-server/networking/dns/quickstart-install-configure-dns-server?tabs=gui)
-* [Configure DHCH server]|(https://learn.microsoft.com/en-us/windows-server/networking/technologies/dhcp/quickstart-install-configure-dhcp-server?tabs=gui)
-* [Install IIS web server]|(https://www.techtarget.com/searchwindowsserver/video/How-to-install-and-test-Windows-Server-2019-IIS)
+* [Installing Windows Server](https://www.youtube.com/watch?v=eFK656ubKi4)
+* [Configure DNS server](https://learn.microsoft.com/en-us/windows-server/networking/dns/quickstart-install-configure-dns-server?tabs=gui)
+* [Configure DHCH server](https://learn.microsoft.com/en-us/windows-server/networking/technologies/dhcp/quickstart-install-configure-dhcp-server?tabs=gui)
+* [Install IIS web server](https://www.techtarget.com/searchwindowsserver/video/How-to-install-and-test-Windows-Server-2019-IIS)
 * Install LDAP
-* Secure AD
+* [Secure AD](https://infrasos.com/how-to-setup-active-directory-on-windows-server-2022/)
