--- a/3. Windows/03-AD/01.Windows_server.md
+++ b/3. Windows/03-AD/01.Windows_server.md
@@ -33,6 +33,6 @@ Take the following courses:
 * [Configure DNS server](https://learn.microsoft.com/en-us/windows-server/networking/dns/quickstart-install-configure-dns-server?tabs=gui)
 * [Configure DHCH server](https://learn.microsoft.com/en-us/windows-server/networking/technologies/dhcp/quickstart-install-configure-dhcp-server?tabs=gui)
 * [Install IIS web server](https://www.techtarget.com/searchwindowsserver/video/How-to-install-and-test-Windows-Server-2019-IIS)
-* Install LDAP
+* [Install LDAP](https://learn.microsoft.com/en-us/troubleshoot/windows-server/identity/enable-ldap-signing-in-windows-server)
 * [Secure AD](https://infrasos.com/how-to-setup-active-directory-on-windows-server-2022/)
 * [Adding users](https://www.server-world.info/en/note?os=Windows_Server_2019&p=active_directory&f=4#:~:text=Active%20Directory%20%3A%20Add%20User%20Accounts2019%2F02%2F21&text=Run%20%5BServer%20Manager%5D%20and%20click,Active%20Directory%20Users%20and%20Conputers%5D.&text=Right%2DClick%20%5BUsers%5D%20on,New%5D%20%2D%20%5BUser%5D.&text=Input%20Username%20and%20Logon%20name%20for%20a%20new%20user.&text=Set%20initial%20password%20for%20a%20new%20User.](https://www.server-world.info/en/note?os=Windows_Server_2019&p=active_directory&f=4)https://www.server-world.info/en/note?os=Windows_Server_2019&p=active_directory&f=4)
