--- a/3. Windows/03-AD/01.Windows_server.md
+++ b/3. Windows/03-AD/01.Windows_server.md
@@ -11,8 +11,35 @@ Now this is something you've never done before, but you know you'll find the res
 
 On this computer, there will be two users. 
 1. Alice will be the administrator of the system. 
-2. Bob, who is a user with restricted access. 
+2. Bob, who is a user with restricted access.
+
+**Create Bob's Folder:**
+
+Create a folder for Bob in the appropriate location on your server. For example, C:\Users\Bob.
+Set Folder Permissions:
+
+- Right-click on the folder (C:\Users\Bob) and select "Properties."
+- Go to the "Security" tab.
+- Click on "Edit" to modify permissions.
+- Add Bob to the list of users/groups.
+- Configure permissions for Bob as follows:
+- Allow "Read & Execute" to traverse and execute files and folders.
+- Allow "List folder contents" to see what's inside the folder.
+- Allow "Read" to view the content of files.
+- Allow "Write" to create, modify, and delete files.
+
+**Remove Inheritance:**
+
+You might need to disable inheritance if the folder inherits permissions from its parent. To do this, in the folder's properties, go to the "Advanced" security settings and uncheck the option "Include inheritable permissions from this object's parent."
+
+**Apply Changes:**
+
+- Click "OK" to apply the changes.
+
+With these steps, you've configured Bob's access to his home folder on your Windows Server 2019, and he should only have access to this specific directory on the domain.
+
 He can only read, write and execute files in his ``/Users/Bob`` folder.
+
 3. Some network services will have to be shared between users.
 4. You must configure an IIS web server 
 5. You must configure a DNS server
